samples/_failures_safe/1761625136_8a8290_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4020b907.c: In function ‘main’:
./samples/SAFE/__tmp_4020b907.c:151:5: error: expected declaration or statement at end of input
  151 |     printf("State Machine Demo - Enter commands:\n");
      |     ^~~~~~
